<resources>
    <string name="app_name">舞美汇</string>
    <string name="login_dance_mall">登录舞美汇</string>
    <string name="login_tip">无需注册，输入手机号即可登录</string>
    <string name="please_input_you_phone">请输入您的手机号码</string>
    <string name="get_verification">获取验证码</string>
    <string name="please_input_verification">请输入验证码</string>
    <string name="login">登录</string>
    <string name="login_agree">登录即视为同意</string>
    <string name="and">及</string>
    <string name="use_agree">《用户使用协议》</string>
    <string name="secret_agree">《隐私条款》</string>
    <string name="third_part_login">第三方登录</string>
    <string name="confirm">确定</string>
    <string name="send_verification">发送验证码</string>
    <string name="main_resource">舞美资源</string>
    <string name="main_communication">行业交流</string>
    <string name="main_message">消息</string>
    <string name="myself">我的</string>
    <string name="main_demand">发需求</string>
    <string name="please_input_shop_name">请输入商家名称</string>
    <string name="finish">完成</string>
    <string name="pay_tip">定金支付\n需先支付200.00</string>
    <string name="capture_take_photo">拍照上传</string>
    <string name="album_upload">相册上传</string>
    <string name="pay_result_tip">这个界面用于显示第三方app通过微信支付的结果</string>
    <string name="share_to">分享至</string>
</resources>
