<?xml version="1.0" encoding="utf-8"?>
<com.zhy.autolayout.AutoLinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:rtv="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gray_f7"
    android:orientation="vertical">

    <include layout="@layout/title_layout" />

    <EditText
        android:id="@+id/phone_number"
        android:layout_width="690px"
        android:layout_height="88px"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20px"
        android:inputType="phone"
        android:background="@drawable/shape_bind_phone_edit_bg"
        android:hint="@string/please_input_you_phone"
        android:textColor="@color/black_3"
        android:textSize="26px" />

    <com.zhy.autolayout.AutoRelativeLayout
        android:layout_width="690px"
        android:layout_height="88px"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20px"
        android:background="@drawable/shape_bind_phone_edit_bg">

        <EditText
            android:id="@+id/verification_code"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/shape_bind_phone_edit_bg"
            android:hint="@string/please_input_verification"
            android:inputType="phone"
            android:textColor="@color/black_3"
            android:textSize="26px"

            />

        <TextView
            android:id="@+id/get_verification"
            android:layout_width="180px"
            android:layout_height="match_parent"
            android:layout_alignParentEnd="true"
            android:background="@drawable/shape_bind_get_verification_bg"
            android:gravity="center"
            android:text="@string/send_verification"
            android:textColor="@color/white"
            android:textSize="25px" />
    </com.zhy.autolayout.AutoRelativeLayout>

    <com.ruffian.library.RTextView
        android:id="@+id/submit"
        android:layout_width="690px"
        android:layout_height="88px"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="60px"
        android:background="#3FB9FF"
        android:gravity="center"
        android:text="@string/confirm"
        android:textColor="@color/white"
        android:textSize="34px"
        rtv:corner_radius="88px" />

</com.zhy.autolayout.AutoLinearLayout>