<?xml version="1.0" encoding="utf-8"?>
<com.zhy.autolayout.AutoRelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    xmlns:app="http://schemas.android.com/tools"
    app:ignore="NamespaceTypo">

    <com.hzxmkuar.wumeihui.base.NoSlideViewPager
        android:id="@+id/fragment_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="138px"
        android:background="@color/white"


        android:orientation="vertical">

    </com.hzxmkuar.wumeihui.base.NoSlideViewPager>

    <com.zhy.autolayout.AutoRelativeLayout
        android:layout_width="match_parent"
        android:layout_height="138px"
        android:layout_alignParentBottom="true"
        android:background="@color/white">

        <View
            android:layout_width="325px"
            android:layout_height="1px"
            android:layout_marginTop="38px"
            android:background="@color/gray_e" />

        <View
            android:layout_width="100px"
            android:layout_height="50px"
            android:layout_centerHorizontal="true"
            app:layout_auto_basewidth="height"
            android:background="@drawable/shape_main_bottom_circle" />

        <View
            android:layout_width="325px"
            android:layout_height="1px"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="38px"
            android:background="@color/gray_e" />
        <View
            android:layout_width="88px"
            android:layout_height="88px"
            android:background="@drawable/main_add_need"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="6px"
            app:layout_auto_basewidth="height"
            android:id="@+id/add_demand"
            />
        <com.zhy.autolayout.AutoRelativeLayout
            android:layout_width="match_parent"
            android:layout_alignParentBottom="true"
            android:layout_height="88px">
        <com.zhy.autolayout.AutoRelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginBottom="10px"
            android:layout_marginLeft="35px"
            android:id="@+id/resource_layout"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:textSize="20px"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"
                android:text="@string/main_resource"
                android:id="@+id/resource_text"
                />
            <View
                android:layout_width="46px"
                android:layout_height="46px"
                android:background="@drawable/main_resource_select_icon"
                app:layout_auto_basewidth="height"
                android:layout_centerHorizontal="true"
                android:layout_alignParentBottom="true"
                android:layout_marginBottom="33px"
                android:id="@+id/resource_view"
                />
        </com.zhy.autolayout.AutoRelativeLayout>
            <com.zhy.autolayout.AutoRelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginBottom="10px"
                android:layout_marginLeft="185px"
                android:id="@+id/communication_layout"
                >
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/gray_6"
                    android:textSize="20px"
                    android:layout_alignParentBottom="true"
                    android:layout_centerHorizontal="true"
                    android:text="@string/main_communication"
                    android:id="@+id/communication_text"
                    />
                <View
                    android:layout_width="46px"
                    android:layout_height="46px"
                    android:background="@drawable/main_communication_un_select"
                    app:layout_auto_basewidth="height"
                    android:id="@+id/communication_view"
                    android:layout_centerHorizontal="true"
                    android:layout_alignParentBottom="true"
                    android:layout_marginBottom="33px"
                    />
            </com.zhy.autolayout.AutoRelativeLayout>
            <com.zhy.autolayout.AutoRelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginBottom="10px"
               android:layout_marginRight="204px"
                android:id="@+id/message_layout"
                android:layout_alignParentEnd="true"
                >
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/gray_6"
                    android:textSize="20px"
                    android:id="@+id/message_text"
                    android:layout_alignParentBottom="true"
                    android:layout_centerHorizontal="true"
                    android:text="@string/main_message"
                    />
                <View
                    android:layout_width="44px"
                    android:layout_height="44px"
                    android:background="@drawable/service_message_ico"
                    app:layout_auto_basewidth="height"
                    android:layout_centerHorizontal="true"
                    android:layout_alignParentBottom="true"
                    android:id="@+id/message_view"
                    android:layout_marginBottom="34px"
                    />
            </com.zhy.autolayout.AutoRelativeLayout>
            <com.zhy.autolayout.AutoRelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginBottom="10px"
                android:layout_marginRight="53px"
                android:id="@+id/myself_layout"
                android:layout_alignParentEnd="true"
                >
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/gray_6"
                    android:textSize="20px"
                    android:layout_alignParentBottom="true"
                    android:layout_centerHorizontal="true"
                    android:text="@string/myself"
                    android:id="@+id/myself_text"
                    />
                <View
                    android:layout_width="46px"
                    android:layout_height="46px"
                    android:background="@drawable/main_myself_un_select"
                    app:layout_auto_basewidth="height"
                    android:layout_centerHorizontal="true"
                    android:layout_alignParentBottom="true"
                    android:layout_marginBottom="33px"
                    android:id="@+id/myself_view"
                    />
            </com.zhy.autolayout.AutoRelativeLayout>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/gray_6"
                android:textSize="20px"
                android:layout_marginBottom="10px"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"
                android:text="@string/main_demand"
                />
        </com.zhy.autolayout.AutoRelativeLayout>

    </com.zhy.autolayout.AutoRelativeLayout>


</com.zhy.autolayout.AutoRelativeLayout>
