<?xml version="1.0" encoding="utf-8"?>
<com.zhy.autolayout.AutoRelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/tools"
    app:ignore="NamespaceTypo">

    <android.support.v4.view.ViewPager
        android:id="@+id/fragment_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="98px"
        android:background="@color/gray_6"
        android:orientation="vertical">

    </android.support.v4.view.ViewPager>

    <com.zhy.autolayout.AutoLinearLayout
        android:layout_width="match_parent"
        android:layout_height="98px"
        android:layout_alignParentBottom="true"
        android:background="@color/white">



        <com.zhy.autolayout.AutoRelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginBottom="10px"

            android:id="@+id/myself_layout"
            android:layout_weight="1"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/gray_6"
                android:textSize="20px"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"
                android:text="@string/myself"
                android:id="@+id/myself_text"
                />
            <View
                android:layout_width="46px"
                android:layout_height="46px"
                android:background="@drawable/main_myself_select"
                app:layout_auto_basewidth="height"
                android:layout_centerHorizontal="true"
                android:layout_alignParentBottom="true"
                android:layout_marginBottom="33px"
                android:id="@+id/myself_view"
                />
        </com.zhy.autolayout.AutoRelativeLayout>


            <com.zhy.autolayout.AutoRelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginBottom="10px"

                android:id="@+id/message_layout"
                android:layout_weight="1"
                android:layout_alignParentEnd="true"
                >
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/gray_6"
                    android:textSize="20px"
                    android:id="@+id/message_text"
                    android:layout_alignParentBottom="true"
                    android:layout_centerHorizontal="true"
                    android:text="@string/main_message"
                    />
                <View
                    android:layout_width="44px"
                    android:layout_height="44px"
                    android:background="@drawable/service_message_ico"
                    app:layout_auto_basewidth="height"
                    android:layout_centerHorizontal="true"
                    android:layout_alignParentBottom="true"
                    android:id="@+id/message_view"
                    android:layout_marginBottom="34px"
                    />
            </com.zhy.autolayout.AutoRelativeLayout>

        <com.zhy.autolayout.AutoRelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginBottom="10px"
            android:layout_weight="1"
            android:id="@+id/communication_layout"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/gray_6"
                android:textSize="20px"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"
                android:text="@string/main_communication"
                android:id="@+id/communication_text"
                />
            <View
                android:layout_width="46px"
                android:layout_height="46px"
                android:background="@drawable/main_communication_un_select"
                app:layout_auto_basewidth="height"
                android:id="@+id/communication_view"
                android:layout_centerHorizontal="true"
                android:layout_alignParentBottom="true"
                android:layout_marginBottom="33px"
                />
        </com.zhy.autolayout.AutoRelativeLayout>
        </com.zhy.autolayout.AutoLinearLayout>




</com.zhy.autolayout.AutoRelativeLayout>
